fixed Logo position on mobile devices

--- a/src/components/Toobar/Toobar.module.css
+++ b/src/components/Toobar/Toobar.module.css
@@ -19,21 +19,17 @@
 }
 
 .Logo {
-  padding-top: 40px;
   height: 100%;
 }
 
 @media (max-width: 499px) {
   .Toobar {
-    height: 50px;
+    height: 40px;
     padding: 0 20px;
+    justify-content: flex-end;
   }
 
   .DesktopOnly {
-    display: none;
-  }
-
-  .Logo {
     display: none;
   }
 }
